--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.4.0",
     "@rollup/plugin-url": "^5.0.0",
+    "express-session": "^1.18.1",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
+    "session-file-store": "^1.5.0",
     "svelte": "^3.17.3"
   }
 }
